fix css on firefox and more

--- a/src/index.css
+++ b/src/index.css
@@ -231,7 +231,6 @@ input[type="input"].short-input {
 .text-input {
   font-size: 16px;
   padding: 0.4em;
-  margin: 0.2em 0;
   background-color: #373a47;
   border: 2px solid #77797a;
   border-radius: 5px;
